[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# http server & middleware
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-br"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# errors
thiserror = "1"
anyhow = "1"
async-trait = "0.1"

# env
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "0.2"
hyper = { version = "1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"
